Fix: setting bug in windows and code optimization.